--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-router-dom": "^5.3.3",
+    "apexcharts": "^4.5.0",
     "axios": "^1.8.2",
     "formik": "^2.4.6",
     "framer-motion": "^12.5.0",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "reactflow": "^11.11.4",
     "redux": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
